# codefile

./: Veril  basic_connect.py  ble_central.py  ble_client.py  bleak_diagnosis.py  bleak_info.py  bleak_test.py  bluetooth_client.py  bluetooth_test.py  bluetooth_test2.py  cmdline.txt  config.txt  connect_direct.py  connect_test.py  dht_sensor.py  display_color_tset.py  display_pin_test.py  error  error_blutooth  error_kafka  fixed_display.py  gpiotest.py  infrared_sensor.py  lcd_test.py  main.py  main_detail_for_camera.py  main_simple_for_camera.py  main_simple_for_camera_eng.py  main_with_rppg.py  mic_stt.py  modern_bleak_connect.py  mqtt_config (1).py  pi5_ble_receiver.py  pyproject.toml  quick_test.py  rasberryaicamera_test.py  requirements.txt  rppg-test-code.py  rppg_addon.py  rppg_addon_test.py  (+14 more)
MIC_STT.py/: mic_stt.py  tts.py
cameramodule/: Servo.py  ai_camera.py  ai_camera_final.py  ai_camera_mqtt_complete (1).py  lcd-test.py  main_ai_camera.py  main_ai_camera_noservo.py  main_detail_for_camera.py  main_simple_for_camera.py  main_simple_for_camera_eng.py  rppg_addon.py  servo_face_tracker.py  spo2_estimator.py  stress_analyzer.py
sensor/: DHT22.py  main_sensor.py  mqtt_sensor_sender.py  pir_sensor.py  rpi5-dht-sensor-simple.py  rpi5-infrared-sensor-simple.py  rpi5-sound-sensor-simple.py  sound_sensor.py  temp_humidity_sensor.py
