[project]
name = "rpi-ai-camera"
version = "0.1.0"
description = "Raspberry Pi AI Camera Project"
requires-python = ">=3.11"
dependencies = [
    "picamera2",
    "opencv-python",
    "numpy",
    "pillow",
    "tflite-runtime",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

# rPPG 프로젝트를 위한 추가 패키지
biometrics = [
    "scipy",
    "matplotlib",
    "pandas",
]
