[project]
name = "deepcare-camera"
version = "0.1.0"
description = "Raspberry Pi AI Camera Project"
requires-python = ">=3.11"
dependencies = [
    "picamera2",
    "opencv-python",
    "numpy",
    "Pillow",
    "tflite-runtime",
    "scipy",
    "RPi.GPIO",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
biometrics = [
    "scipy",
    "matplotlib",
    "pandas",
]

[tool.uv]
system-packages = true
